# pstoedit

./: #Makefile#  .gitignore  HISTORY  Makefile  Makefile.am  Makefile.in  PROBLEMS  README  README.md  aclocal.m4  autogen.sh  changelog.htm  config.h  configure  configure.ac  drvFIG.c  drvFIG.h  drvMIF.c  drvMIF.h  drvTGIF.c  drvTGIF.h  drvbase.c  drvbase.h  drvexample.c  drvexample.h  drvgeneral.h  index.htm  lex.yy.c  makeedit.l  news.txt  pstoedit.htm  pstoedit.man  pstoedit_2.3.3.tar.gz.delta  pstoedit_2.3.3.tar.gz.id  pstoedit_2.60.orig.tar.gz.delta  pstoedit_2.60.orig.tar.gz.id  pstoedit_3.15.orig.tar.gz.delta  pstoedit_3.15.orig.tar.gz.id  pstoedit_3.31.orig.tar.gz.delta  pstoedit_3.31.orig.tar.gz.id  (+50 more)
.github/: FUNDING.yml
.github/workflows/: c-cpp.yml
QT/PstoeditQtGui/: Makefile.am  PstoeditQtGui.cpp  PstoeditQtGui.desktop  PstoeditQtGui.h  PstoeditQtGui.pro
config/: Makefile.in  configure  configure.in  pstoedit.pc.in
contrib/: Makefile.in
contrib/cairo/: Makefile.in
contrib/java/: Makefile.in
contrib/java/java1/: Makefile.in  PsDrawing.java  PsPages.java  readme_java1.txt
contrib/java/java2/: Makefile.in  PsDrawing.java  readme_java2.html
debian/: .gitignore  NOTE  PstoeditQtGui.1  README.Debian  TODO  changelog  clean  control  copyright  dirs  docs  files  gbp.conf  libpstoedit-dev.docs  libpstoedit-dev.files  libpstoedit-dev.install  libpstoedit-dev.manpages  libpstoedit0.files  libpstoedit0c2a.install  libpstoedit0t64.lintian-overrides  not-installed  pstoedit-config.sgml  pstoedit-gui.install  pstoedit-gui.manpages  pstoedit.doc-base  pstoedit.docs  pstoedit.examples  pstoedit.manpages  pstoedit.preinst  rules  shlibs.local  substvars  watch
debian-tmp/usr/doc/pstoedit/: changelog.Debian
debian-tmp/usr/lib/pstoedit/: pstoedit.pro
debian/patches/: 0001-GCC-16-autoconf-2.72.patch  0001-remove-readme.txt-from-installation-list.patch  0001-spelling.patch  0002-Qt-linker-flags.patch  0003-desktop-keywords.patch  0004-desired-docs.patch  0007-doc-build-tweaks.patch  0009-latex2man-trans-dot-slash.patch  01-configure-no-pedantic.patch  02-errors-to-stderr.patch  03-doc-remove-nonfree-options.patch  04-disable-ACLOCAL_AMFLAGS.patch  04-fix-obsolete-LIBPNG_LDFLAGS.patch  04-remove-external-entities.patch  05-fix-plugin-loading.patch  06-spelling-donts.patch  07-spelling-pathes.patch  08-autoupdate.patch  09-simplify-autogen.sh.patch  configure-no-pedantic.patch  doc-remove-nonfree-options.patch  dynload-no-dlclose.patch  fix-riscv.patch  series
debian/source/: lintian-overrides
debian/tmp/DEBIAN/: control
debian/tmp/usr/doc/pstoedit/copyright/: copyright
debian/upstream/: metadata
doc/: Makefile  Makefile.am  Makefile.in  Makefile.l2m  changelog.htm  latex2man.local  pstoedit.1  pstoedit.htm  pstoedit.linux.prerequisites.md  pstoedit.tex  readme.txt
docs/: index.html  pstoedit_donate.htm
examples/: Makefile.am  Makefile.in  colrtest.ps
githubpage/: index.html
java/: Makefile.in  readme_java.txt
java/java1/: Makefile.in
java/java2/: Makefile.in
misc/: Makefile.am  Makefile.in  svg.fmp  wemf.fmp
misc/swffonts/: Makefile.in
msdev/: Makefile.in
os2/: Makefile.in  makefile.os2  pstoedit.inf  pstoedit.ini  readme.os2
othersrc/: Makefile.in
othersrc/gsdllinc/: Makefile.am  Makefile.in  callgsdllviaiapi.cpp  dwmainc.c  getini.c  gsdll.h  gvwgsver.c  gvwgsver.h
src/: .indent.pro  Makefile.am  Makefile.in  base64writer.cpp  base64writer.h  callgs.cpp  cbstream.cpp  cbstream.h  cdlib.cpp  cmdmain.cpp  config.h  cppcomp.h  dlltst.cpp  drvasy.cpp  drvasy.h  drvbase.cpp  drvbase.h  drvcairo.cpp  drvcairo.h  drvcfdg.cpp  drvcfdg.h  drvcgm.cpp  drvcgm.h  drvdxf.cpp  drvdxf.h  drvfig.cpp  drvfig.h  drvfuncs.h  drvgcode.cpp  drvgcode.h  drvgnplt.cpp  drvgnplt.h  drvgschem.cpp  drvgschem.h  drvhpgl.cpp  drvhpgl.h  drvidraw.cpp  drvidraw.h  drvjava.cpp  drvjava.h  (+85 more)
src/bc5gui/: menu.h  paradlg.cpp  readme.txt  winp2e.h  winp2ead.cpp  winp2ead.h  winp2eap.cpp  winp2eap.def  winp2eap.h  winp2eap.rc  winp2eap.res  winp2eap.rh  winp2edc.cpp  winp2edc.h  winp2eex.ide  winp2eex.mak  winp2ein.ide  winp2ein.mak
